corpus/c/syntax/case-09/snapshots/gcc9_12/native_text_capture/render.debug.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: syntax error
--> src/main.c:2:10
help: fix the first parser error at the user-owned location
why: src/main.c:2:10: error: expected ')' before '{' token
| src/main.c:2:10
|     if (1 {
|          ^
raw:
  src/main.c:2:10: error: expected ')' before '{' token
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
debug-facts: group_ref=group-7fd4f877b5aa, role=independent_root, visibility_floor=never_hidden, episode_ref=episode-a41e1a468d2a
debug-facts: evidence_tags=actionability_short, early_invocation, strong_root_family, user_owned_primary
debug-raw: provenance_capture_refs=stderr.raw
error: syntax error
--> src/main.c:5:1
help: fix the first parser error at the user-owned location
why: src/main.c:5:1: error: expected expression before '}' token
| src/main.c:5:1
| }
| ^
raw:
  src/main.c:5:1: error: expected expression before '}' token
debug: rule_id=rule.family.syntax.phase_or_message
debug: matched_conditions=message_contains=expected, message_contains=before, phase=parse
debug-facts: group_ref=group-acc4d5d3731f, role=independent_root, visibility_floor=never_hidden, episode_ref=episode-6ba56010e8cf
debug-facts: evidence_tags=actionability_short, early_invocation, strong_root_family, user_owned_primary
debug-raw: provenance_capture_refs=stderr.raw
error: linker reported a failure
help: check the missing/duplicate symbol and the object or library inputs
why: src/main.c: In function 'main':
raw:
  src/main.c: In function 'main':
      2 |     if (1 {
        |        ~ ^~
        |          )
      5 | }
        | ^
debug: rule_id=rule.family.linker.structured_or_message
debug: matched_conditions=phase=link
debug-facts: group_ref=group-abe91b79ea07, role=uncertain, visibility_floor=never_hidden, episode_ref=episode-effeba5c4f59
debug-facts: evidence_tags=actionability_short, classified_family, early_invocation, no_primary_location
debug-raw: provenance_capture_refs=stderr.raw
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output